# openCVTest

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/opencv/smartdata/com/opencvtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-math.cpp
app/src/main/java/opencv/smartdata/com/opencvtest/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/opencv/smartdata/com/opencvtest/: ExampleUnitTest.java
mathlib/: CMakeLists.txt  build.gradle
mathlib/src/androidTest/java/opencv/smartdata/com/mathlib/: ExampleInstrumentedTest.java
mathlib/src/main/: AndroidManifest.xml
mathlib/src/main/cpp/: add.cpp  add.h
mathlib/src/test/java/opencv/smartdata/com/mathlib/: ExampleUnitTest.java
